[package]
name = "wasi-experimental-http-wasmer"
version = "0.5.0"
authors = ["Benjamin Coenen <benjamin.coenen@hotmail.com>"]
edition = "2018"
repository = "https://github.com/deislabs/wasi-experimental-http"
license = "MIT"
description = "Experimental HTTP library for WebAssembly in Wasmer"
readme = "readme.md"

[dependencies]
anyhow = "1.0"
bytes = "1"
futures = "0.3"
http = "0.2"
reqwest = { version = "0.11", default-features = true, features = ["json", "blocking"] }
thiserror = "1.0"
tokio = { version = "1.4.0", features = ["full"] }
url = "2.2.1"
# TODO use upstream version when merged
wasmer = { version = "2.0.0", git = "https://github.com/bnjjj/wasmer", branch = "feat_send_sync_resolver" }
wasmer-wasi = { version = "2.0.0", git = "https://github.com/bnjjj/wasmer", branch = "feat_send_sync_resolver" }
wasi-common = "0.28"
tracing = { version = "0.1", features = ["log"] }
