[package]
name = "wasi-experimental-http-wasmer"
version = "0.5.0"
authors = ["Benjamin Coenen <benjamin.coenen@hotmail.com>"]
edition = "2018"
repository = "https://github.com/deislabs/wasi-experimental-http"
license = "MIT"
description = "Experimental HTTP library for WebAssembly in Wasmer"
readme = "readme.md"

[dependencies]
anyhow = "1.0"
bytes = "1"
futures = "0.3"
http = "0.2"
reqwest = { version = "0.11", default-features = true, features = ["json", "blocking"] }
thiserror = "1.0"
tokio = { version = "1.4.0", features = ["full"] }
url = "2.2.1"
wasmer = { version = "2.1.1" }
wasmer-wasi = { version = "2.1.1" }
wasi-common = "0.31"
tracing = { version = "0.1", features = ["log"] }
once_cell = "1.8.0"
